# github-semantic-labels-template

./: Cargo.toml  LICENSE-MIT
.github/workflows/: run.disabled.yml  run.yml.disabled
data/: labels.example.toml  labels.toml  repos.example.toml  repos.toml
src/: data.rs  github.rs  labels.rs  main.rs
